--- a/vcf.cabal
+++ b/vcf.cabal
@@ -16,7 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  ghc-options : -Wall -O4
+  ghc-options : -Wall -O4 -threaded
   exposed-modules:  Bio.VCF.Internal.Types,
                      Bio.VCF.Parser.Parser,
                      Bio.VCF.Parser.Helpers
